--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -25,8 +25,10 @@ sites:
     url: https://cp.jonasled.de
   - name: Mailcow
     url: https://mailcow.jonasled.de
-  - name: Mailcow 2
-    url: https://mailcow2.jonasled.de
+  - name: Proxmox Mail Gateway
+    url: https://pmg.jonasled.de
+  - name: Proxmox Mail Gateway 2
+    url: https://pmg2.jonasled.de
   - name: Minio S3 Server
     url: https://s3.jonasled.de/share/
   - name: Gameserver Node
